--- a/11-sinatra-CRUD/carnival_chaos/app/views/index.erb
+++ b/11-sinatra-CRUD/carnival_chaos/app/views/index.erb
@@ -3,10 +3,13 @@
 <a href="/carnivals/new">Make New Carnival</a>
 <hr>
 
-<% @carnivals.each do |carnival| %>
-  <div class=carnival>
-    <h5>Name: <a href="/carnivals/<%= carnival.id %>"><%= carnival.name %></a></h5>
-    <h5>Location: <%= carnival.location %></h5>
-    <h5>Rides: <%= carnival.number_of_rides %></h5>
-  </div>
-<% end %>
+<div class='index-container'>
+  <% @carnivals.each do |carnival| %>
+    <div class='index-tile'>
+      <h5>Name: <a href="/carnivals/<%= carnival.id %>"><%= carnival.name %></a></h5>
+      <img id="index_img" src="<%= carnival.img_url %>" alt="<%= carnival.name %>">
+      <h5>Location: <%= carnival.location %></h5>
+      <h5>Rides: <%= carnival.number_of_rides %></h5>
+    </div>
+  <% end %>
+</div>
