--- a/11-sinatra-CRUD/carnival_chaos/app/views/layout.erb
+++ b/11-sinatra-CRUD/carnival_chaos/app/views/layout.erb
@@ -12,6 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="/stylesheets/main.css" />
+    <link rel="stylesheet" href="/stylesheets/carnival.css" />
   </head>
   <body>
     <div class="wrapper">
