--- a/14-rails-associations/the_breakfast_club/app/views/cereals/new.html.erb
+++ b/14-rails-associations/the_breakfast_club/app/views/cereals/new.html.erb
@@ -1,20 +1,22 @@
-<h1>CREATE CEREAL</h1>
+<div class="container form-container">
+  <h2>CREATE CEREAL</h2>
 
-<%= form_for @cereal do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
+  <%= form_for @cereal do |f| %>
+    <%= f.label :name %>
+    <%= f.text_field :name %>
 
-  <%= f.label :brand %>
-  <%= f.text_field :brand %>
+    <%= f.label :brand %>
+    <%= f.text_field :brand %>
 
-  <%= f.label :release_year %>
-  <%= f.number_field :release_year %>
+    <%= f.label :release_year %>
+    <%= f.number_field :release_year %>
 
-  <%= f.label :price %>
-  <%= f.number_field :price %>
+    <%= f.label :slogan %>
+    <%= f.number_field :slogan %>
 
-  <%= f.label :img_url %>
-  <%= f.text_field :img_url %>
+    <%= f.label :img_url %>
+    <%= f.text_field :img_url %>
 
-  <%= f.submit %>
-<% end %>
+    <%= f.submit %>
+  <% end %>
+</div>
