--- a/14-rails-associations/the_breakfast_club/app/views/cereals/show.html.erb
+++ b/14-rails-associations/the_breakfast_club/app/views/cereals/show.html.erb
@@ -12,4 +12,13 @@
   <%= link_to "Index", cereals_path %>
   <br>
   <%= link_to "Edit Cereal", edit_cereal_path(@cereal) %>
+
+
+<h4>REVIEWS </h4>
+  <% @cereal.reviews.each do |review| %>
+    <p>CONTENT: <%= review.content %></p>
+    <p>RATING: <%= review.rating %></p>
+    <p>USER: <%= review.user.name %></p>
+    <hr>
+  <% end %>
 </div>
