--- a/14-rails-associations/the_breakfast_club/app/views/cereals/index.html.erb
+++ b/14-rails-associations/the_breakfast_club/app/views/cereals/index.html.erb
@@ -7,6 +7,7 @@
       <h3><%= cereal.slogan %></h3>
 
       <%= button_to "Delete", cereal_path(cereal), method: :delete %>
+      <%= button_to "Write Review", new_review_path, method: :get %>
     </div>
   <%  end  %>
 </div>
