--- a/15-rails-validations/the_breakfast_club/app/views/cereals/_form.html.erb
+++ b/15-rails-validations/the_breakfast_club/app/views/cereals/_form.html.erb
@@ -1,3 +1,9 @@
+  <% if flash[:errors] %>
+    <% flash[:errors].each do |error| %>
+      <p><%= error %></p>
+    <% end %>
+  <% end %>
+
 
   <%= form_for @cereal do |f| %>
     <%= f.label :name %>
