--- a/34-events-state/dinnder/src/App.css
+++ b/34-events-state/dinnder/src/App.css
@@ -7,6 +7,10 @@
   pointer-events: none;
 }
 
+p {
+  font-size: 0.5em;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
